tests/spec/emit/snapshots/propagates_call_returning_option_alias.snap
---
source: tests/spec/emit/types.rs
description: |
  
  type MyOpt = Option<int>
  
  fn source() -> MyOpt {
    Some(5)
  }
  
  fn consume() -> Option<int> {
    let n = source()?
    Some(n + 1)
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

type MyOpt = lisette.Option[int]

func source() (int, bool) {
	return 5, true
}

func consume() (int, bool) {
	n, ok := source()
	if !ok {
		return 0, false
	}
	return n + 1, true
}
