tests/spec/emit/snapshots/propagates_call_returning_result_alias.snap
---
source: tests/spec/emit/types.rs
description: |
  
  type MyRes = Result<int, error>
  
  fn source() -> MyRes {
    Ok(5)
  }
  
  fn consume() -> Result<int, error> {
    let n = source()?
    Ok(n + 1)
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

type MyRes = lisette.Result[int, error]

func source() (int, error) {
	return 5, nil
}

func consume() (int, error) {
	n, err := source()
	if err != nil {
		return 0, err
	}
	return n + 1, nil
}
