tests/spec/emit/snapshots/propagation_check_temp_var_no_collision.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  import "go:fmt"
  
  fn foo() -> Result<int, string> {
    let x = Ok(1)?
    let check_1 = 7
    fmt.Println(check_1)
    Ok(x)
  }
  
  fn main() {
    let _ = foo()
  }
---
package main

import (
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
)

func foo() lisette.Result[int, string] {
	check := lisette.MakeResultOk[int, string](1)
	if check.Tag != lisette.ResultOk {
		return check
	}
	x := check.OkVal
	check_1 := 7
	fmt.Println(check_1)
	return lisette.MakeResultOk[int, string](x)
}

func main() {
	foo()
}
