tests/spec/emit/snapshots/pub_field_assignment_capitalizes.snap
---
source: tests/spec/emit/types.rs
description: |
  
  pub struct Counter {
    pub value: int,
  }
  
  fn test() {
    let mut c = Counter { value: 0 };
    c.value = 10
  }
---
package main

type Counter struct {
	Value int
}

func test() {
	c := Counter{Value: 0}
	c.Value = 10
}
