tests/spec/emit/snapshots/pub_function_same_module_call_uses_exported_name.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  import "go:fmt"
  
  pub fn greet_all() -> string {
    "hi"
  }
  
  fn main() {
    fmt.Println(greet_all())
  }
---
package main

import "fmt"

func GreetAll() string {
	return "hi"
}

func main() {
	fmt.Println(GreetAll())
}
