tests/spec/emit/snapshots/pub_function_uncased_name_gets_export_prefix.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  import "go:fmt"
  
  pub fn 挨拶() -> string {
    "こんにちは"
  }
  
  fn main() {
    fmt.Println(挨拶())
  }
---
package main

import "fmt"

func X挨拶() string {
	return "こんにちは"
}

func main() {
	fmt.Println(X挨拶())
}
